--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
   "license": "MIT",
   "dependencies": {
+    "@emotion/css": "11.1.3",
     "@grafana/data": "latest",
     "@grafana/runtime": "latest",
     "@grafana/ui": "latest",
@@ -22,6 +23,7 @@
     "import": "^0.0.6",
     "lodash": "^4.17.11",
     "q": "^1.5.1",
+    "react-select": "4.3.0",
     "react-use": "^17.3.1",
     "uuid": "^8.3.2"
   },
@@ -32,6 +34,7 @@
     "@testing-library/react": "^12.1.0",
     "@types/grafana": "https://git@github.com/CorpGlory/types-grafana.git",
     "@types/lodash": "^4.14.173",
+    "@types/react-select": "4.0.13",
     "@types/uuid": "^8.3.1",
     "googleapis": "^49.0.0",
     "grafana-sdk-mocks": "github:grafana/grafana-sdk-mocks"
