--- a/package.json
+++ b/package.json
@@ -16,30 +16,26 @@
   "license": "MIT",
   "dependencies": {
     "@emotion/css": "11.1.3",
-    "@grafana/data": "latest",
-    "@grafana/runtime": "latest",
-    "@grafana/ui": "latest",
+    "@grafana/data": "canary",
+    "@grafana/experimental": "^0.0.1",
+    "@grafana/runtime": "canary",
+    "@grafana/ui": "canary",
     "brace": "^0.10.0",
     "import": "^0.0.6",
     "lodash": "^4.17.11",
     "q": "^1.5.1",
-    "react-select": "4.3.0",
     "react-use": "^17.3.1",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@google-cloud/bigquery": "^5.9.0",
-    "@grafana/toolkit": "latest",
+    "@grafana/toolkit": "canary",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
     "@types/grafana": "https://git@github.com/CorpGlory/types-grafana.git",
     "@types/lodash": "^4.14.173",
-    "@types/react-select": "4.0.13",
     "@types/uuid": "^8.3.1",
     "googleapis": "^49.0.0",
     "grafana-sdk-mocks": "github:grafana/grafana-sdk-mocks"
-  },
-  "resolutions": {
-    "rxjs": "7.3.0"
   }
 }
