--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "import": "^0.0.6",
     "lodash": "^4.17.11",
     "q": "^1.5.1",
+    "react-awesome-query-builder": "^4.10.0",
     "react-use": "^17.3.1",
     "uuid": "^8.3.2"
   },
