Add support for loading private key from file (#131)
* Add support for loading private key from file

Prior, the private key needed to be embedded into the yaml config which is prone to failues by a faulty indentation. The option 'privateKeyFile' enables to read the private key from a file

* Add private key path field in config editor

Adds additional field in config editor for displaying the private key path from the datasource yaml file.

* Add unit tests for private key path input cases

* Rename publicKeyFile to privateKeyPath in frontend and backend service

* Fix linting issues and add lint scripts from toolkit

* Remove yarn lock file from gitignore

* Add yarn lock file

* Update CHANGELOG with private key path change

* Remove newline at the end of file

* Revert package changes in yarn lock file

* Add newline for yarn lock file

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "grafana-bigquery-datasource",
-  "version": "1.1.1",
+  "version": "1.2.0",
   "description": "Google BigQuery datasource for Grafana",
   "scripts": {
     "dev": "grafana-toolkit plugin:dev",
@@ -11,7 +11,10 @@
     "test:jest": "jest --config jest.config.js",
     "test:watch": "grafana-toolkit plugin:test  --watch",
     "test:codecov": "jest --config jest.config.js && codecov",
-    "build:sign": "yarn run build:prod && yarn run sign"
+    "build:sign": "yarn run build && yarn run sign",
+    "lint": "yarn run lint:ts",
+    "lint:ts": "eslint . --ext .js,.tsx,.ts --cache",
+    "lint:fix": "yarn lint:ts --fix"
   },
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
   "license": "MIT",
