--- a/package.json
+++ b/package.json
@@ -19,32 +19,25 @@
   "author": "Grafana Labs <team@grafana.com> (https://grafana.com)",
   "license": "MIT",
   "dependencies": {
-    "@emotion/css": "11.1.3",
-    "@grafana/data": "canary",
-    "@grafana/experimental": "0.0.2-canary.31",
-    "@grafana/runtime": "canary",
-    "@grafana/ui": "canary",
-    "brace": "^0.10.0",
-    "import": "^0.0.6",
+    "@emotion/css": "11.9.0",
+    "@grafana/data": "9.1.0",
+    "@grafana/experimental": "1.0.1",
+    "@grafana/runtime": "9.1.0",
+    "@grafana/ui": "9.1.0",
     "lodash": "^4.17.11",
-    "q": "^1.5.1",
     "react-awesome-query-builder": "^5.1.2",
     "react-use": "^17.3.1",
     "react-virtualized-auto-sizer": "^1.0.6",
-    "rxjs": "7.5.1",
+    "rxjs": "7.5.6",
     "sql-formatter-plus": "^1.3.6",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
-    "@google-cloud/bigquery": "^5.9.0",
-    "@grafana/toolkit": "canary",
+    "@grafana/toolkit": "9.1.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.1.0",
-    "@types/grafana": "https://git@github.com/CorpGlory/types-grafana.git",
     "@types/lodash": "^4.14.173",
     "@types/react-virtualized-auto-sizer": "^1.0.1",
-    "@types/uuid": "^8.3.1",
-    "googleapis": "^49.0.0",
-    "grafana-sdk-mocks": "github:grafana/grafana-sdk-mocks"
+    "@types/uuid": "^8.3.1"
   }
 }
