--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@emotion/css": "^11.1.3",
     "@grafana/data": "9.4.1",
     "@grafana/experimental": "1.0.1",
+    "@grafana/google-sdk": "0.1.1",
     "@grafana/runtime": "9.4.1",
     "@grafana/ui": "9.4.1",
     "lodash": "^4.17.11",
