Ensure sqlds is created for every new plugin instance (#177)

--- a/cspell.config.json
+++ b/cspell.config.json
@@ -47,7 +47,11 @@
     "tempvar",
     "tokenprovider",
     "typecheck",
-    "vectorator"
+    "vectorator",
+    "instancemgmt",
+    "pluginv2",
+    "genproto",
+    "datasourcetest"
   ],
   "language": "en-US"
 }
