--- a/package.json
+++ b/package.json
@@ -24,14 +24,14 @@
   "license": "MIT",
   "dependencies": {
     "@emotion/css": "^11.1.3",
-    "@grafana/data": "9.4.1",
-    "@grafana/experimental": "1.5.0",
-    "@grafana/google-sdk": "0.1.1",
-    "@grafana/runtime": "9.4.1",
-    "@grafana/ui": "9.4.1",
+    "@grafana/data": "10.1.5",
+    "@grafana/experimental": "1.7.3",
+    "@grafana/google-sdk": "0.1.2",
+    "@grafana/runtime": "10.1.5",
+    "@grafana/ui": "10.1.5",
+    "@react-awesome-query-builder/ui": "^6.4.1",
     "lodash": "^4.17.11",
     "react": "17.0.2",
-    "react-awesome-query-builder": "^5.1.2",
     "react-dom": "17.0.2",
     "react-use": "^17.3.1",
     "react-virtualized-auto-sizer": "^1.0.6",
@@ -41,8 +41,6 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.4",
-    "@grafana/e2e": "9.2.5",
-    "@grafana/e2e-selectors": "9.2.5",
     "@grafana/eslint-config": "^6.0.0",
     "@grafana/tsconfig": "^1.2.0-rc1",
     "@swc/core": "^1.3.90",
@@ -54,7 +52,6 @@
     "@types/jest": "^29.5.0",
     "@types/lodash": "^4.14.194",
     "@types/node": "^18.15.11",
-    "@types/react-virtualized-auto-sizer": "^1.0.1",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^5.42.1",
     "@typescript-eslint/parser": "^5.42.1",
@@ -69,7 +66,7 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-webpack-plugin": "^4.0.1",
     "fork-ts-checker-webpack-plugin": "^8.0.0",
-    "glob": "^10.2.7",
+    "glob": "10.3.6",
     "identity-obj-proxy": "3.0.0",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
@@ -85,6 +82,9 @@
     "webpack": "^5.86.0",
     "webpack-cli": "^5.1.4",
     "webpack-livereload-plugin": "^3.0.2"
+  },
+  "resolutions": {
+    "jackspeak": "2.1.1"
   },
   "packageManager": "yarn@1.22.19"
 }
